--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-TT
+
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
@@ -9,4 +9,10 @@ TT
 			Conheça Rick and Morty
 		</title>
 	</head>
+	<body>
+		<main>
+			<section>
+				<img src="https://static.wikia.nocookie.net/logopedia/images/f/f6/Rick_and_Morty_logo.svg/revision/latest?cb=20210611111743" alt="Logo de Rick and Morty">
+		</main>
+	</body>
 </html>
