Adicionar corpo do HTML

--- a/index.html
+++ b/index.html
@@ -2,17 +2,25 @@
 
 <html lang="pt-br">
 	<head>
-		<meta charset="UTF-8">
-		<meta http-equiv="x-ua-compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>
-			Conheça Rick and Morty
-		</title>
+		<meta charset="UTF-8" />
+		<meta http-equiv="x-ua-compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Conheça Rick and Morty</title>
 	</head>
 	<body>
 		<main>
 			<section>
-				<img src="https://static.wikia.nocookie.net/logopedia/images/f/f6/Rick_and_Morty_logo.svg/revision/latest?cb=20210611111743" alt="Logo de Rick and Morty">
+				<img
+					src="https://static.wikia.nocookie.net/logopedia/images/f/f6/Rick_and_Morty_logo.svg/revision/latest?cb=20210611111743"
+					alt="Logo de Rick and Morty"
+				/>
+				<ul>
+					<li>Nome:</li>
+					<li>Espécie:</li>
+					<li>Está vivo?</li>
+				</ul>
+				<button>Conheça um personagem de Rick and Morty</button>
+			</section>
 		</main>
 	</body>
 </html>
