Implementar estilos para imagem

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 
 <html lang="pt-br">
 	<head>
+		<link rel="stylesheet" href="style.css">
 		<meta charset="UTF-8" />
 		<meta http-equiv="x-ua-compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -14,7 +15,7 @@
 					src="https://static.wikia.nocookie.net/logopedia/images/f/f6/Rick_and_Morty_logo.svg/revision/latest?cb=20210611111743"
 					alt="Logo de Rick and Morty"
 				/>
-				<ul>
+				<ul id="detalhes">
 					<li>Nome:</li>
 					<li>Espécie:</li>
 					<li>Está vivo?</li>
