--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					src="https://static.wikia.nocookie.net/logopedia/images/f/f6/Rick_and_Morty_logo.svg/revision/latest?cb=20210611111743"
 					alt="Logo de Rick and Morty"
 				/>
-				<ul id="detalhes">
+				<ul id="detalhes-container">
 					<li>Nome:</li>
 					<li>Espécie:</li>
 					<li>Está vivo?</li>
