Substituir imagem da página

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<main>
 			<section>
 				<img
-					src="https://static.wikia.nocookie.net/logopedia/images/f/f6/Rick_and_Morty_logo.svg/revision/latest?cb=20210611111743"
-					alt="Logo de Rick and Morty"
+					src="https://images.app.goo.gl/psELXSdVAhEcDmiP9"
+					alt ="Morty fazendo careta no Rick"
 				/>
 				<ul id="detalhes-container">
 					<li>Nome:</li>
