--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 		<main>
 			<section>
 				<img
-					src="https://images.app.goo.gl/psELXSdVAhEcDmiP9"
-					alt ="Morty fazendo careta no Rick"
+					src="https://th.bing.com/th/id/R.dd041753db50c9cadd534d9be30f7f7b?rik=J%2fl74BL%2bCM31Eg&pid=ImgRaw&r=0"
+					alt =""
 				/>
 				<ul id="detalhes-container">
 					<li>Nome:</li>
