Redefinir conteúdo do atributo alt

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			<section>
 				<img
 					src="https://th.bing.com/th/id/R.dd041753db50c9cadd534d9be30f7f7b?rik=J%2fl74BL%2bCM31Eg&pid=ImgRaw&r=0"
-					
+					alt ="Rick e Morty com expressões assustadas"
 				/>
 				<ul id="detalhes-container">
 					<li>Nome:</li>
