--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="pt-br">
 	<head>
 		<link rel="stylesheet" href="style.css">
+		<script src="script.js"></script>
 		<meta charset="UTF-8" />
 		<meta http-equiv="x-ua-compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
