Capturar elementos HTML

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 					alt ="Rick e Morty com expressões assustadas"
 				/>
 				<ul id="detalhes-container">
-					<li>Nome:</li>
-					<li>Espécie:</li>
-					<li>Está vivo?</li>
+					<li id="nome">Nome:</li>
+					<li id="especie">Espécie:</li>
+					<li id="estado">Está vivo?</li>
 				</ul>
 				<button>Conheça um personagem de Rick and Morty</button>
 			</section>
