--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
 	<head>
 		<link rel="stylesheet" href="style.css">
-		<script src="script.js"></script>
+		<script src="script.js" defer></script>
 		<meta charset="UTF-8" />
 		<meta http-equiv="x-ua-compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -16,10 +16,19 @@
 					src="https://th.bing.com/th/id/R.dd041753db50c9cadd534d9be30f7f7b?rik=J%2fl74BL%2bCM31Eg&pid=ImgRaw&r=0"
 					alt ="Rick e Morty com expressões assustadas"
 				/>
-				<ul id="detalhes-container">
-					<li id="nome">Nome:</li>
-					<li id="especie">Espécie:</li>
-					<li id="estado">Está vivo?</li>
+				<ul class="detalhes-container">
+					<li>Nome: <p id="nome"></p></li>
+					<li>Espécie: <p id="especie"></p></li>
+					<li>Está vivo? <p id="estado"></p></li>
+				</ul>
+				<ul class="detalhes-container">
+					<li>Nome: <p id="nnome"></p></li>
+					<li>Espécie: <p id="eespecie"></p></li>
+					<li>Está vivo? <p id="eestado"></p></li>
+				</ul>
+				<ul class="detalhes-container"><li>Nome:	<p id="nnnome"></p></li>
+					<li>Espécie:	<p id="eeespecie"></p></li>
+					<li>Está vivo? <p id="eeestado"></p></li>
 				</ul>
 				<button>Conheça um personagem de Rick and Morty</button>
 			</section>
