--- a/index.html
+++ b/index.html
@@ -1,37 +1,67 @@
 <!DOCTYPE html>
 
 <html lang="pt-br">
-	<head>
-		<link rel="stylesheet" href="style.css">
-		<script src="script.js" defer></script>
-		<meta charset="UTF-8" />
-		<meta http-equiv="x-ua-compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Conheça Rick and Morty</title>
-	</head>
-	<body>
-		<main>
-			<section>
-				<img
-					src="https://th.bing.com/th/id/R.dd041753db50c9cadd534d9be30f7f7b?rik=J%2fl74BL%2bCM31Eg&pid=ImgRaw&r=0"
-					alt ="Rick e Morty com expressões assustadas"
-				/>
-				<ul class="detalhes-container">
-					<li>Nome: <p id="nome"></p></li>
-					<li>Espécie: <p id="especie"></p></li>
-					<li>Está vivo? <p id="estado"></p></li>
-				</ul>
-				<ul class="detalhes-container">
-					<li>Nome: <p id="nnome"></p></li>
-					<li>Espécie: <p id="eespecie"></p></li>
-					<li>Está vivo? <p id="eestado"></p></li>
-				</ul>
-				<ul class="detalhes-container"><li>Nome:	<p id="nnnome"></p></li>
-					<li>Espécie:	<p id="eeespecie"></p></li>
-					<li>Está vivo? <p id="eeestado"></p></li>
-				</ul>
-				<button>Conheça um personagem de Rick and Morty</button>
-			</section>
-		</main>
-	</body>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js" defer></script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="x-ua-compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Conheça Rick and Morty</title>
+  </head>
+  <body>
+    <main>
+      <section>
+                  <img id="imagem"
+            src="https://th.bing.com/th/id/R.dd041753db50c9cadd534d9be30f7f7b?rik=J%2fl74BL%2bCM31Eg&pid=ImgRaw&r=0"
+            alt="Rick e Morty com expressões assustadas"
+          />
+        <ul class="detalhes-container">
+          <li>
+            Nome:
+            <p id="nome"></p>
+          </li>
+          <li>
+            Espécie:
+            <p id="especie"></p>
+          </li>
+          <li>
+            Está vivo?
+            <p id="estado"></p>
+          </li>
+        </ul>
+          <img id="iimagem" src=" " alt=" " />
+                <ul class="detalhes-container">
+          <li>
+            Nome:
+            <p id="nnome"></p>
+          </li>
+          <li>
+            Espécie:
+            <p id="eespecie"></p>
+          </li>
+          <li>
+            Está vivo?
+            <p id="eestado"></p>
+          </li>
+        </ul>
+								<img id="iiimagem" src="" alt="">
+        <ul class="detalhes-container">
+          <li>
+            Nome:
+            <p id="nnnome"></p>
+          </li>
+          <li>
+            Espécie:
+            <p id="eeespecie"></p>
+          </li>
+          <li>
+            Está vivo?
+            <p id="eeestado"></p>
+          </li>
+        </ul>
+        <button>Conheça um personagem de Rick and Morty</button>
+      </section>
+    </main>
+  </body>
 </html>
