Alterar texto exibido no botão

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <p id="eeestado"></p>
           </li>
         </ul>
-        <button>Conheça um personagem de Rick and Morty</button>
+        <button>Click e conheça os personagens</button>
       </section>
     </main>
   </body>
